# docdigest

./: .gitignore  CLAUDE.md  COMMANDS.md  DEVELOPMENT.md  LICENSE.md  MANIFEST.in  PART1.md  PROMPT_SUPPLEMENTS.md  README.md  docdigest_config.json  docdigest_template.md  next.md  pyproject.toml  setup.py  temp.config  temp_summaries.js
.github/workflows/: ai-meta-desriptions.yml  ai-summaries.yml  python-app.yml
design/: PART1.md  PART2.md  PART3.md  PART4.md  index.md
docdigest/: .main.py.swp  commitify.py  config.py  file_utils.py  git_utils.py  import_meta.py  import_results.py  imports.py  main.py  meta_description.py  parse_docs.py  pyproject.toml  summarize.py
example-docs/: package-lock.json
example-docs/docs/: intro.md  test.md
example-docs/docs/tutorial-basics/: _partial.mdx  congratulations.md  create-a-blog-post.md  create-a-document.md  create-a-page.md  deploy-your-site.md
example-docs/docs/tutorial-extras/: manage-docs-versions.md  translate-your-site.md
example-docs/src/css/: custom.css
example-docs/src/theme/DocCardList/: index.js
example-docs/static/js/: summaries.js
temp/tutorial-basics/: congratulations.md
